# tableviewqml

./: .gitignore  CMakeLists.txt  main.cpp  qml.qrc
control/: playerviewcontrol.cpp  playerviewcontrol.h
players/: p2d.h  player.h  playerbuilder.cpp  playerbuilder.h  playertype.h
qml/: PlayerView.qml  main.qml
